Base structure and added BG image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         <div class="form-section"></div>
         <div class="create-account-section"></div>
         <div class="image-section">
-            <div class="image-overlay"></div>
+            
+            <div class="image-overlay">
+                <div class="logo-overlay">
+                    <img src="/img/odin-lined.png">
+                </div>
+            </div>
         </div>
 
     </main>
