Fixed form elements

--- a/index.html
+++ b/index.html
@@ -17,37 +17,52 @@
         <div class="toptext-section">
             <h2>This is not a real online service! You know you need something
                 like this in your life to help you realize your deepest dreams.</h2>
-                
-             <h2>You know you want to.</h2>   
 
-         
+            <h2>You know you want to.</h2>
+
+
         </div>
         <div class="form-section">
 
             <form>
                 <div class="first-row">
-                    <label for="fname">First name</label><br>
-                    <input type="text" id="fname" name="fname"><br>
 
-                    <label for="lname">Last name</label><br>
-                    <input type="text" id="lname" name="lname"><br>
+                    <div class="first-name-div">
+                        <label for="fname">FIRST NAME</label><br>
+                        <input type="text" id="fname" name="fname"><br>
+                    </div>
+
+                    <div class="last-name-div">
+                        <label for="lname">LAST NAME</label><br>
+                        <input type="text" id="lname" name="lname"><br>
+                    </div>
                 </div>
 
                 <div class="second-row">
-                    <label for="email">Email</label><br>
-                    <input type="email" id="email" name="email"><br>
 
+                    <div class="email-div">
+                        <label for="email">EMAIL</label><br>
+                        <input type="email" id="email" name="email"><br>
+                    </div>
 
-                    <label for="phone">Phone number</label><br>
-                    <input type="tel" id="phone" name="phone"><br>
+                    <div class="phone-div">
+                        <label for="phone">PHONE NUMBER</label><br>
+                        <input type="tel" id="phone" name="phone"><br>
+                    </div>
                 </div>
 
-                <div class="third-row">
-                    <label for="password">Password</label><br>
-                    <input type="password" id="password" name="password"><br>
 
-                    <label for="password">Confirm password</label><br>
-                    <input type="password" id="password" name="password"><br>
+                <div class="third-row">
+
+                    <div class="password-div">
+                        <label for="password">PASSWORD</label><br>
+                        <input type="password" id="password" name="password"><br>
+                    </div>
+
+                    <div class="confirm-div">
+                        <label for="password">CONFIRM PASSWORD</label><br>
+                        <input type="password" id="password" name="password"><br>
+                    </div>
                 </div>
 
             </form>
@@ -55,24 +70,30 @@
         <div class="create-account-section">
             <button>Create account</button>
             <p>Already have an account? Log in</p>
-        </div>
-
-        <div class="image-section">
-
-            <div class="image-overlay">
-                <div class="logo-overlay">
-                    <img src="/img/odin-lined.png">
-                </div>
-            </div>
-        </div>
-
-    </main>
 
 
 
 
 
-    <script src="code.js" async defer></script>
+
+</body>
+</div>
+
+<div class="image-section">
+
+    <div class="image-overlay">
+        HEIHEI
+    </div>
+
+</div>
+
+</main>
+
+
+
+
+
+<script src="code.js" async defer></script>
 </body>
 
 </html>
